--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
     <div class="text-box">
       <div class="heading">
-        <a href="https://www.instagram.com/cyclopathia/">@CYCLOPATHIA</a>
+        <a href="https://www.instagram.com/cyclopathia/">@cyclopathia</a>
       </div>
     </div>
 
